--- a/boys.html
+++ b/boys.html
@@ -69,7 +69,7 @@
                 <div class="informacoes">
                     <span>Leitinho</span>
                 </div>
-                <img src="img/bala.webp" alt="Patria" class="icon">
+                <img src="img/leitinho.png" alt="Patria" class="icon">
                 <p class="descricao">Leitinho é um membro da equipe dos Boys, que são um grupo de vigilantes que combatem super-heróis corruptos em um mundo onde esses super-heróis são celebridades e são considerados acima da lei.O nome de Milk vem do fato de que ele sempre carrega consigo um frasco de leite materno, que ele acredita ser a chave para manter sua saúde e imunidade em dia. Ele é um soldado habilidoso e um estrategista astuto, tendo servido anteriormente nas Forças Armadas dos EUA antes de se juntar aos Boys.Além disso, Milk é um personagem profundamente moral, que está comprometido em fazer o que é certo, mesmo que isso signifique lutar contra inimigos poderosos e enfrentar grandes desafios. Ele é um dos personagens mais respeitados na equipe e é frequentemente visto liderando a equipe em missões perigosas.</p>
             </li>
         </ul>
